# dab_scraping_coto

./: .gitignore  README.md  databricks.yml  mkdocs.yml  pyproject.toml  teste.txt
.github/workflows/: databricks-ci.yaml
docs/: index.md
mutators/: configs.py
mutators/guardrails/cluster/instance_types/: teste.py
mutators/guardrails/cluster/workers/: jobs.py  pipelines.py
mutators/guardrails/schedule/: jobs.py  pipelines.py
resources/: scraping_coto.job.yml  scraping_coto.pipeline.yml
resources/coto/: scraping_coto.job.yml  scraping_coto.pipeline.yml  variables.yaml
resources/la_gallega/: scraping_lagallega.job.yml  variables.yaml
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/reference/SUMMARY/: index.html
site/reference/scraping_coto/etl/bronze/staging_to_bronze/: index.html
site/reference/scraping_coto/etl/gold/silver_to_gold/: index.html
site/reference/scraping_coto/etl/silver/bronze_to_silver/: index.html
site/reference/scraping_coto/etl/silver/schemas/categories/: index.html
site/reference/scraping_coto/etl/silver/schemas/departments/: index.html
site/reference/scraping_coto/etl/silver/schemas/items/: index.html
site/reference/scraping_coto/etl/silver/transformations/categories/: index.html
site/reference/scraping_coto/etl/silver/transformations/departments/: index.html
site/reference/scraping_coto/etl/silver/transformations/items/: index.html
site/reference/scraping_coto/etl/silver/transformations/subcategories/: index.html
site/reference/scraping_coto/etl/silver/transformations/utils/converters/: index.html
site/reference/scraping_coto/etl/staging/extract_urls/: index.html
site/reference/scraping_coto/utils/dbutils/: index.html
site/reference/scraping_coto/utils/json/: index.html
site/reference/scraping_coto/utils/literals/: index.html
site/reference/scraping_coto/utils/logger/: index.html
site/reference/scraping_coto/utils/retry/: index.html
site/reference/scraping_coto/utils/spark_session/: index.html
site/search/: search_index.json
src/: check_volumes.ipynb  load_staging.ipynb  staging_to_bronze.ipynb
src/modules/scrapers/: base_scraper.py  page_scraper.py
src/modules/utils/: etl.py  json.py  literals.py  logger.py  retry.py  widgets.py
src/scraping_coto/: 00_check_volumes.ipynb  01_load_staging.ipynb  02_staging_to_bronze.ipynb  03_bronze_to_silver.ipynb  04_silver_to_gold.ipynb
src/scraping_coto/etl/bronze/: staging_to_bronze.py
src/scraping_coto/etl/gold/: silver_to_gold.py
src/scraping_coto/etl/silver/: bronze_to_silver.py
src/scraping_coto/etl/silver/schemas/: categories.py  departments.py  items.py
src/scraping_coto/etl/silver/transformations/: categories.py  departments.py  items.py  subcategories.py
src/scraping_coto/etl/silver/transformations/utils/: converters.py
src/scraping_coto/etl/staging/: extract_urls.py
src/scraping_coto/logs/: app.log.1  app.log.2  app.log.3  app.log.4
src/scraping_coto/utils/: dbutils.py  json.py  literals.py  logger.py  retry.py  spark_session.py
src/scraping_lagallega/data/: attributes.json  attributes_enriched.json
src/scraping_lagallega/tasks/: 00_check_volumes.ipynb  01_loading_staging.py  02_staging_to_bronze.ipynb  03_bronze_to_silver.ipynb
src/scraping_lagallega/transformations/silver/: categories.py  products.py
src/scraping_lagallega/utils/: scraper.py  teste.py
tests/: main_test.py
